--- a/flut/pubspec.yaml
+++ b/flut/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cloud_firestore: ^5.0.0
   firebase_auth: ^5.0.0
   firebase_storage: ^12.0.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
