--- a/flut/pubspec.yaml
+++ b/flut/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^6.2.1
   
   # Firebase dependencies for Concept-2
   firebase_core: ^3.0.0
