--- a/flut/pubspec.yaml
+++ b/flut/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   firebase_auth: ^5.0.0
   firebase_storage: ^12.0.0
 
+  # Image Picker for uploading files
+  image_picker: ^1.1.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
