--- a/flut/pubspec.yaml
+++ b/flut/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   # Image Picker for uploading files
   image_picker: ^1.1.2
 
+  # Maps & Location
+  google_maps_flutter: ^2.10.0
+  geolocator: ^13.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
