--- a/flut/pubspec.yaml
+++ b/flut/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   google_maps_flutter: ^2.10.0
   geolocator: ^13.0.0
 
+  # State Management
+  provider: ^6.1.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
